<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpattern">

    <RelativeLayout
        android:id="@+id/rl_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/text_vendor_login"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:paddingTop="@dimen/dp20">

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp20"
                    android:src="@drawable/logo" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:background="@drawable/lineinput">

                    <EditText
                        android:id="@+id/emailaddress"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textbox_height_medium"
                        android:background="@android:color/transparent"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/dp10"
                        android:singleLine="true"
                        android:textColor="@color/txtbox_text_color"
                        android:textColorHint="@color/txtbox_hint_color"
                        android:textSize="@dimen/text_size_15" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@drawable/lineinput">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textbox_height_medium"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/dp10"
                        android:singleLine="true"
                        android:textColor="@color/txtbox_text_color"
                        android:textColorHint="@color/txtbox_hint_color"
                        android:textSize="@dimen/text_size_15" />
                </android.support.design.widget.TextInputLayout>


                <RelativeLayout
                    android:id="@+id/rl_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp15"
                    android:background="@drawable/button_select">


                    <TextView
                        android:id="@+id/text_signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/signinicon"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="USER LOGIN"
                        android:textColor="@color/txt_black"
                        android:textSize="@dimen/text_btn_size"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_signIn"
                    android:layout_marginTop="@dimen/dp15"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/image_facebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginRight="@dimen/dp4"
                        android:layout_weight="1"
                        android:background="@drawable/facebook" />



                    <ImageView
                        android:id="@+id/image_linkedin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/dp4"
                        android:layout_weight="1"
                        android:background="@drawable/in"
                        android:gravity="center" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp15">

                    <TextView
                        android:id="@+id/text_new_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:singleLine="true"
                        android:text="@string/create_account"
                        android:textColor="@color/text_color_login"
                        android:textColorHint="@color/txtbox_hint_color"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:id="@+id/text_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:singleLine="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/txtbox_text_color"
                        android:textColorHint="@color/txtbox_hint_color"
                        android:textSize="@dimen/text_size" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/text_vendor_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp20"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/vendor_login"
            android:textColor="@color/txtbox_text_color"
            android:textColorHint="@color/txtbox_hint_color"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_network"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/network_issue_layout" />

    </RelativeLayout>


</RelativeLayout>
